# Antivirus-Immunity

./: README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
.trae/documents/: Initialize Rust Project & Basic Sensor.md  Refactoring Complete.md
Antivirus-Immunity/: .gitignore  Cargo.toml  EBPF_ROADMAP.md  README.md  USER_MANUAL.md  VERIFICATION.md
Antivirus-Immunity/.github/: dependabot.yml
Antivirus-Immunity/.github/workflows/: ci.yml
Antivirus-Immunity/antivirus-immunity-common/: Cargo.toml
Antivirus-Immunity/antivirus-immunity-common/src/: ai_cortex.rs  event.rs  hash_cache.rs  lib.rs  logger.rs  safety.rs
Antivirus-Immunity/antivirus-immunity-core/: Cargo.toml  antigens.yar
Antivirus-Immunity/antivirus-immunity-core/src/: logger.rs  main.rs
Antivirus-Immunity/antivirus-immunity-core/src/effector/: cytotoxic_t_cell.rs  mod.rs  quarantine.rs
Antivirus-Immunity/antivirus-immunity-core/src/immune/: ai_cortex.rs  danger_theory.rs  fuzzy_hash.rs  memory_b_cell.rs  mod.rs  path_validator.rs
Antivirus-Immunity/antivirus-immunity-core/src/receptor/: hash_cache.rs  mod.rs  toll_like_receptor.rs
Antivirus-Immunity/antivirus-immunity-core/tests/: mock_antigen.rs
Antivirus-Immunity/antivirus-immunity-core/tools/: antigen_extractor.rs
Antivirus-Immunity/antivirus-immunity-ebpf/: Cargo.toml  build.sh
Antivirus-Immunity/antivirus-immunity-ebpf/bpf/: probes.bpf.c
Antivirus-Immunity/antivirus-immunity-ebpf/src/: container.rs  filesystem.rs  main.rs  netlink_connector.rs  network.rs  policy.rs  probe.rs  process_tree.rs  procfs.rs  resource_aware.rs
