[package]
name = "antivirus-immunity-common"
version = "0.4.0"
edition = "2021"
description = "Cross-platform shared types and utilities for Antivirus-Immunity"
authors = ["KingDragon-yc"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.51", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
lru = "0.12"
