[package]
name = "antivirus-immunity-common"
version = "0.4.0"
edition = "2024"
description = "Cross-platform shared types and utilities for Antivirus-Immunity"
authors = ["KingDragon-yc"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots", "http2"] }
tokio = { version = "1.52", features = ["full"] }
uuid = { version = "1.23", features = ["v4"] }
lru = "0.18"
