[package]
name = "antivirus-immunity-core"
version = "0.3.0"
edition = "2021"
description = "An antivirus engine inspired by the biological immune system, with local AI cortex"
authors = ["KingDragon-yc"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
yara-x = "1.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lru = "0.12"
reqwest = { version = "0.12", features = ["json"] }
sysinfo = "0.31"
uuid = { version = "1.0", features = ["v4"] }

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Storage_FileSystem",
    "Win32_Security",
]
