[package]
name = "antivirus-immunity-core"
version = "0.4.1"
edition = "2024"
description = "An antivirus engine inspired by the biological immune system, with local AI cortex"
authors = ["KingDragon-yc"]

[dependencies]
antivirus-immunity-common = { path = "../antivirus-immunity-common" }

tokio = { version = "1.52", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
yara-x = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lru = "0.18"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "webpki-roots", "http2"] }
sysinfo = "0.31"
uuid = { version = "1.23", features = ["v4"] }

# Fuzzy hashing: CTPH (Ssdeep-like) pure Rust + Imphash (PE/ELF import table)
pelite = "0.6"
goblin = "0.9"

[dependencies.windows]
version = "0.57"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Storage_FileSystem",
    "Win32_Security",
]
