[package]
name = "antivirus-immunity-ebpf"
version = "0.4.0"
edition = "2021"
description = "eBPF-based cloud-native Linux security engine for Antivirus-Immunity"
authors = ["KingDragon-yc"]

# This crate is Linux-only. The eBPF probes (C code) are compiled separately
# via libbpf/clang and loaded at runtime.

[dependencies]
antivirus-immunity-common = { path = "../antivirus-immunity-common" }

tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
nix = { version = "0.29", features = ["process", "signal", "user", "fs"] }
sysinfo = "0.31"
yara-x = "1.14"
uuid = { version = "1.0", features = ["v4"] }

# eBPF userspace library — CO-RE (Compile Once, Run Everywhere)
# libbpf-rs provides safe Rust bindings for libbpf
# NOTE: Requires libbpf + bpftool on the build machine.
#       On target machines, only a BTF-enabled kernel is needed (5.4+).
# libbpf-rs = "0.24"
# libbpf-cargo = "0.24"

# Placeholder: These deps will be uncommented when building on Linux.
# For now, we define the architecture and userspace event processing pipeline.

[target.'cfg(target_os = "linux")'.dependencies]
# These will activate on Linux builds:
# libbpf-rs = "0.24"
# procfs = "0.17"  # Parse /proc filesystem

[[bin]]
name = "immunity-ebpf"
path = "src/main.rs"
